[package]
name = "snesr"
version = "0.1.0"
authors = ["bccbrendan <bccbrendan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to download SDL:
# sudo apt install libsdl2-dev

[dependencies]
sdl2 = "0.32"
bitfield = "0.13.2"
log = "0.4.8"
env_logger = "0.6.2"

